# rust_ci_experiments

./: Cargo.toml  book.toml  readme.md
.github/ISSUE_TEMPLATE/: 1_bug_report.yml  2_feature_request.yml  config.yml
.github/workflows/: ci.yml  release.yml
crates/experimental_do_nothing_crate_please_look_away/: Cargo.toml  readme.md
crates/experimental_do_nothing_crate_please_look_away/src/: lib.rs
docs/: 01_introduction.md
scripts/: link_assets.sh
